--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 <body>
 
   <h1>
-    Lists of resources for accessibility evaluation or development
+    Lists of resources for accessibility evaluation and development
   </h1>
-  <p>This is a recopilation of useful lists of resources to evaluate or develop accessible web or non-web content, as web pages, mobile applications, desktop applications, documents.</p>
+  <p>This is a compilation of useful lists of resources to evaluate and develop accessible web or non-web content, as web pages, mobile applications, desktop applications, documents.</p>
   <p>It is possible to collaborate, sending proposals for corrections of the lists. For this you can open an issue on <a href='https://github.com/josehilera/a11y-lists'>GitHub</a>, or send a message to <a href='mailto:jose.hilera@uah.es'>jose.hilera@uah.es </a>, or via twitter at <a href='https://twitter.com/web_a11y'>@web_a11y</a>.</p>
 
   <table>
