Two new columns: LAST VERSION and OTHER TYPES

--- a/a11y-evaluation-tools.html
+++ b/a11y-evaluation-tools.html
@@ -117,8 +117,12 @@
         <td>Date when the tool was included in the list.</td>
       </tr>
       <tr>
-        <td><strong>INCLUDED BY</strong></td>
-        <td>Name of the person that proposed to include the tool in the list. When the tool is also in the W3C list, the value is &quot;W3C List&quot;.</td>
+        <td><strong>LAST VERSION</strong></td>
+        <td>Date of the latest version of the tool.</td>
+      </tr>
+      <tr>
+        <td><strong>OTHER TYPES</strong></td>
+        <td>When a tool is offered in different versions as tools of different type.</td>
       </tr>
     </tbody>
   </table>
