--- a/a11y-evaluation-tools.html
+++ b/a11y-evaluation-tools.html
@@ -13,7 +13,7 @@
   <p>In this link there is a Google Spreadsheet that includes a list of tools that can be used to evaluate the <strong>accessibility</strong> of web content and non-web content (mobile applications, desktop applications, documents):</p>
   <p><a href='https://docs.google.com/spreadsheets/d/10CTezA0iDdaWggaqxuHawj-5u8YXdZeWBJsIkuvJ364/edit?usp=sharing'>a11y-evaluation-tools list</a></p>
   <p>It is possible to collaborate, sending proposals for corrections of the list, or new tools to be included. For this you can open an issue on <a href='https://github.com/josehilera/a11y-lists'>GitHub</a>, or send a message to <a href='mailto:jose.hilera@uah.es'>jose.hilera@uah.es</a>,
-    or via twitter at <a href='https://twitter.com/web_a11y'>@web_a11y</a>.</p>
+    or via twitter at <a href='https://twitter.com/software_a11y_a11y'>@software_a11y</a>.</p>
   <p>The meaning of the columns in the list is the following:</p>
   <table>
     <thead>
