--- a/a11y-evaluation-tools.html
+++ b/a11y-evaluation-tools.html
@@ -74,8 +74,8 @@
             <li><strong><em>Web API</em></strong>: The tool offers its functionality through the Web in the form of an API installed on a server, usually with RESTful or RESTful technology. In some cases, the API can be downloaded and the evaluator can install
               it on its own local server in stand-alone mode.</li>
             <li><strong><em>Web Application</em></strong>: The tool is an application that the evaluator has to install on a web server in order to use it.</li>
-            <li><strong><em>Web Form</em></strong>: It is a simple web page that includes a form that can be filled in, downloaded and used in local mode as a simple document, without associated functionality on the server.</li></ul>
-          <li><strong><em>Web Page Plugin (widget)</em></strong>: It is a extension to be integrated in a web page.</li>
+            <li><strong><em>Web Form</em></strong>: It is a simple web page that includes a form that can be filled in, downloaded and used in local mode as a simple document, without associated functionality on the server.</li>
+          <li><strong><em>Web Page Plugin (widget)</em></strong>: It is a extension to be integrated in a web page.</li></ul>
         </td>
       </tr>
 
