Added "CSS" as a type of tool

--- a/a11y-evaluation-tools.html
+++ b/a11y-evaluation-tools.html
@@ -65,6 +65,7 @@
             <li><strong><em>Authoring Tool Plugin</em></strong>: It is an extension of some known application (web or desktop) for editing, for example a text editor or a software development environment.</li>
             <li><strong><em>Browser Plugin</em></strong>: It is an extension for a web browser. Parentheses indicate the name of the browser or, if applicable, if it is a valid extension for any browser in the form of a bookmarklet.</li>
             <li><strong><em>Command Line Tool</em></strong>: The tool is executed from a shell of an operating system.</li>
+            <li><strong><em>CSS</em></strong>: The tool is a stylesheet to highlight HTML elements.</li>
             <li> <strong><em>Desktop Application</em></strong>: The tool is a stand-alone application.</li>
             <li><strong><em>Document</em></strong>: The tool is a simple digital document, for example, a Word document, a pdf or a spreadsheet.</li>
             <li><strong><em>Mobile Application</em></strong>: It is an application to be executed on a mobile device, such as a smartphone or a tablet.</li>
